--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,7 @@
 	height: auto;
 	/* margin: 100px auto; */
 	padding: 20px 20px 9px;
-	/* background: #none; */
-	/* background: linear-gradient(#c9dd84, #9fcb96); */
+	background-color: #F5F5F5;
 	border-radius: 5px;
 	border: rgba(105, 105, 105, 0.2) 2px solid;
 	font: 400 46px "Quicksand", sans-serif;
